Shenandoah: all-roots heap walking misses some weak roots

XMLWordPrintable

    • gc
    • b16

      This is caught by vmTestbase_nsk_jvmti:

      $ CONF=linux-x86_64-server-fastdebug make images run-test TEST=vmTestbase/nsk/jvmti/IterateThroughHeap/concrete-klass-filter/ TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC"

      STDOUT:
      The following fake exception stacktrace is for failure analysis.
      nsk.share.Fake_Exception_for_RULE_Creation: (ConcreteKlassFilter.cpp:183) TestClass instance field was not found.
      at nsk_lvcomplain(nsk_tools.cpp:172)
      # ERROR: ConcreteKlassFilter.cpp, 183: TestClass instance field was not found.

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: