8231244: Shenandoah: all-roots heap walking misses some weak roots

Reviewed-by: zgu, rkennke